fix spacing issue

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -31,7 +31,6 @@ body {
 .trivia-box__container {
   width: 1200px;
   height: 600px;
-  margin-left: 650px;
   background-color: rgba(240, 240, 240, .98);
   border-radius: 8px;
   font-size: 34px;
@@ -39,7 +38,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center; 
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .animation-container {
